--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ name = "compliance-trestle-mcp"
 version = "0.1.0"
 description = "MCP server for compliance-trestle OSCAL framework"
 readme = "README.md"
-requires-python = ">=3.9"
-license = {text = "Apache-2.0"}
+requires-python = ">=3.10"
+license = "Apache-2.0"
+license-files = ["LICENSE"]
 authors = [
-    {name = "Trestle MCP Contributors"}
+    {name = "OSCAL Compass", email = "oscal-compass-oversight@googlegroups.com"}
 ]
 keywords = ["mcp", "claude", "oscal", "trestle", "compliance", "security"]
 classifiers = [
@@ -18,7 +19,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
